[gd_scene load_steps=7 format=3 uid="uid://dl5ro3t7tu6hh"]

[ext_resource type="Script" path="res://Editor/Editor.gd" id="1_61o5i"]
[ext_resource type="PackedScene" uid="uid://caysarg36l3s4" path="res://scenes/MainMenutscn.tscn" id="3_cvyan"]
[ext_resource type="PackedScene" uid="uid://b0s8kglde71xq" path="res://Editor/Dabs/Base/dabs.tscn" id="3_m70hj"]

[sub_resource type="GDScript" id="GDScript_33it7"]
script/source = "extends Control

const DAB_Base 			= preload(\"res://Editor/Dabs/Notes/dab_draggable.tscn\")
const DAB_Text 			= preload(\"res://Editor/Dabs/Notes/dab_text.tscn\")
const DAB_Tree 			= preload(\"res://Editor/Dabs/Notes/dab_tree.tscn\")
const DAB_Tree_end 		= preload(\"res://Editor/Dabs/Notes/dab_tree_end.tscn\")
const DAB_Branch 		= preload(\"res://Editor/Dabs/Notes/dab_branch.tscn\")
const DAB_Branch_edit 		= preload(\"res://Editor/Dabs/Notes/dab_branch_edit.tscn\")

@export var dabs: Dabs

func load_chain(chain):
	# remove all cogs
	dabs.clear()
	# add new cogs
	for cog in chain.cogs:
		add_cog(cog)
	pass

func add_cog(cog):
	match cog:
		cog_text:
			add(DAB_Text)
		cog_tree:
			add(DAB_Tree)
		cog_tree_end:
			add(DAB_Tree_end)
		cog_branch:
			add(DAB_Branch)
		_:
			add(DAB_Base)
	pass

func add(dab: PackedScene):
	var ndab = dab.instantiate()
	dabs.add_dab(ndab)
	pass

func _on_add_base_pressed():
	add(DAB_Base)
	pass

func _on_add_text_pressed():
	add(DAB_Text)
	pass

func _on_add_tree_pressed():
	add(DAB_Tree)
	pass 


func _on_add_branch_pressed():
	add(DAB_Branch)
	pass 


func _on_add_tree_end_pressed():
	add(DAB_Tree_end)
	pass


func _on_add_tree_edit_pressed():
	pass


func _on_add_branch_edit_pressed():
	add(DAB_Branch_edit)
	pass
"

[sub_resource type="GDScript" id="GDScript_5bu84"]
script/source = "extends Control

@onready var dad: BaseEditor = get_parent()
@export var scn_mainmenu: PackedScene
@onready var file: MenuButton = %file


func _ready():
	file.get_popup().index_pressed

func file_pressed(index: int):
	match index:
		0: # new file
			dad.new_scripture()
		1: # Save File
			dad.save_scripture()
		2: # Save file as 
			dad.save_scripture()
		3: # Load File
			dad.load_scripture()
		4: # Exit Editor
			get_tree().change_scene_to_packed(scn_mainmenu)
	pass

func _on_file_pressed():
	file.get_popup().index_pressed
	pass

func _on_save_pressed():
	dad.save_scripture()
	pass 

func _on_save_as_pressed():
	print(\"I never made the save as shit work so it's just save for now.\")
	dad.save_scripture()
	pass 


func _on_exit_pressed():
	get_tree().change_scene_to_packed(scn_mainmenu)
	pass 


func _on_load_pressed():
	dad.load_scripture()
	pass 



"

[sub_resource type="GDScript" id="GDScript_bd51h"]
script/source = "extends Control

@export var dad: BaseEditor
@export var newChain: LineEdit

func _on_add_new_chain_pressed():
	if newChain.text != \"\":
		dad.file.add_chain(newChain.text)
	pass
"

[node name="Editor" type="Node2D"]
script = ExtResource("1_61o5i")

[node name="BG" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.027451, 0.027451, 0.027451, 1)

[node name="DabEditor" type="Control" parent="." node_paths=PackedStringArray("dabs")]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_left = 256.0
offset_top = 64.0
offset_right = 1152.0
offset_bottom = 1080.0
script = SubResource("GDScript_33it7")
dabs = NodePath("Dabs")
metadata/_edit_group_ = true

[node name="Dabs" parent="DabEditor" instance=ExtResource("3_m70hj")]
unique_name_in_owner = true
layout_mode = 1
offset_left = 64.0
offset_top = 64.0
offset_right = -312.0
offset_bottom = -56.0

[node name="add_base" type="Button" parent="DabEditor"]
layout_mode = 0
offset_left = 600.0
offset_top = 64.0
offset_right = 704.0
offset_bottom = 80.0
text = "Base"

[node name="add_text" type="Button" parent="DabEditor"]
layout_mode = 0
offset_left = 600.0
offset_top = 104.0
offset_right = 704.0
offset_bottom = 135.0
text = "Text"

[node name="add_tree" type="Button" parent="DabEditor"]
layout_mode = 0
offset_left = 600.0
offset_top = 144.0
offset_right = 704.0
offset_bottom = 176.0
text = "Tree"

[node name="add_branch" type="Button" parent="DabEditor"]
layout_mode = 0
offset_left = 600.0
offset_top = 184.0
offset_right = 704.0
offset_bottom = 216.0
text = "Branch"

[node name="add_tree_end" type="Button" parent="DabEditor"]
layout_mode = 0
offset_left = 600.0
offset_top = 224.0
offset_right = 704.0
offset_bottom = 256.0
text = "Tree - END"

[node name="add_tree_edit" type="Button" parent="DabEditor"]
visible = false
layout_mode = 0
offset_left = 728.0
offset_top = 264.0
offset_right = 848.0
offset_bottom = 296.0
text = "Edit TREE"
alignment = 0

[node name="add_branch_edit" type="Button" parent="DabEditor"]
visible = false
layout_mode = 0
offset_left = 600.0
offset_top = 264.0
offset_right = 720.0
offset_bottom = 296.0
text = "Edit BRANCH"
alignment = 0

[node name="Chains" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 24.0
offset_top = 256.0
offset_right = 256.0
offset_bottom = 808.0
metadata/_edit_group_ = true

[node name="curChain" type="Label" parent="Chains"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -480.0
grow_horizontal = 2
grow_vertical = 2
text = "Current"

[node name="LstChain" type="ItemList" parent="Chains"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 32.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 2
auto_height = true
item_count = 5
item_0/text = "Penis"
item_1/text = "Peepee"
item_2/text = "Chaos"
item_3/text = "asdasdasd"
item_4/text = "asdasdasd"

[node name="startChain" type="OptionButton" parent="Chains"]
unique_name_in_owner = true
layout_mode = 0
offset_top = 520.0
offset_right = 232.0
offset_bottom = 552.0

[node name="Function Buttons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 64.0
script = SubResource("GDScript_5bu84")
scn_mainmenu = ExtResource("3_cvyan")

[node name="file" type="MenuButton" parent="Function Buttons"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 128.0
offset_bottom = 40.0
text = "File"
flat = false
item_count = 5
popup/item_0/text = "New File"
popup/item_0/id = 0
popup/item_1/text = "Save File"
popup/item_1/id = 1
popup/item_2/text = "Save File As"
popup/item_2/id = 2
popup/item_3/text = "Load File"
popup/item_3/id = 3
popup/item_4/text = "Exit Editor"
popup/item_4/id = 4

[node name="load" type="Button" parent="Function Buttons"]
layout_mode = 0
offset_left = 136.0
offset_top = 8.0
offset_right = 256.0
offset_bottom = 40.0
text = "Load"

[node name="save" type="Button" parent="Function Buttons"]
layout_mode = 0
offset_left = 264.0
offset_top = 8.0
offset_right = 384.0
offset_bottom = 40.0
text = "Save"

[node name="saveAs" type="Button" parent="Function Buttons"]
layout_mode = 0
offset_left = 392.0
offset_top = 8.0
offset_right = 512.0
offset_bottom = 40.0
text = "Save As"

[node name="exit" type="Button" parent="Function Buttons"]
layout_mode = 0
offset_left = 1792.0
offset_top = 8.0
offset_right = 1912.0
offset_bottom = 40.0
text = "Exit"

[node name="AddNewChain" type="Control" parent="." node_paths=PackedStringArray("dad", "newChain")]
layout_mode = 3
anchors_preset = 0
offset_left = 16.0
offset_top = 128.0
offset_right = 304.0
offset_bottom = 168.0
script = SubResource("GDScript_bd51h")
dad = NodePath("..")
newChain = NodePath("NewChainn")

[node name="NewChainn" type="LineEdit" parent="AddNewChain"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -48.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "New Chain Name"

[node name="AddNewChain" type="Button" parent="AddNewChain"]
layout_mode = 0
offset_left = 248.0
offset_right = 288.0
offset_bottom = 40.0
text = "+"

[connection signal="pressed" from="DabEditor/add_base" to="DabEditor" method="_on_add_base_pressed"]
[connection signal="pressed" from="DabEditor/add_text" to="DabEditor" method="_on_add_text_pressed"]
[connection signal="pressed" from="DabEditor/add_tree" to="DabEditor" method="_on_add_tree_pressed"]
[connection signal="pressed" from="DabEditor/add_branch" to="DabEditor" method="_on_add_branch_pressed"]
[connection signal="pressed" from="DabEditor/add_tree_end" to="DabEditor" method="_on_add_tree_end_pressed"]
[connection signal="pressed" from="DabEditor/add_tree_edit" to="DabEditor" method="_on_add_tree_edit_pressed"]
[connection signal="pressed" from="DabEditor/add_branch_edit" to="DabEditor" method="_on_add_branch_edit_pressed"]
[connection signal="item_activated" from="Chains/LstChain" to="." method="_on_chain_selected"]
[connection signal="pressed" from="Function Buttons/file" to="Function Buttons" method="_on_file_pressed"]
[connection signal="pressed" from="Function Buttons/load" to="Function Buttons" method="_on_load_pressed"]
[connection signal="pressed" from="Function Buttons/save" to="Function Buttons" method="_on_save_pressed"]
[connection signal="pressed" from="Function Buttons/saveAs" to="Function Buttons" method="_on_save_as_pressed"]
[connection signal="pressed" from="Function Buttons/exit" to="Function Buttons" method="_on_exit_pressed"]
[connection signal="pressed" from="AddNewChain/AddNewChain" to="AddNewChain" method="_on_add_new_chain_pressed"]


